fix: fix handleValidation message that might be null